[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/menu/127Button.gd" type="Script" id=1]
[ext_resource path="res://assets/styles/ButtonStyleNormal.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/fonts/DelfinoFont24.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/editor/window.gd" type="Script" id=4]
[ext_resource path="res://scenes/editor/sounds/click2.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/editor/sounds/hover.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/editor/assets/window_close_hover.png" type="Texture" id=7]
[ext_resource path="res://scenes/editor/assets/window_close.png" type="Texture" id=8]
[ext_resource path="res://scenes/editor/assets/no_title_window.png" type="Texture" id=9]
[ext_resource path="res://assets/styles/ButtonStyleHover.tres" type="StyleBox" id=10]

[node name="AddBlockWindow" type="NinePatchRect"]
margin_left = 165.0
margin_top = 130.0
margin_right = 502.0
margin_bottom = 815.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 0
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 108, 290 )
patch_margin_left = 40
patch_margin_top = 110
patch_margin_right = 40
patch_margin_bottom = 40
script = ExtResource( 4 )

[node name="CloseButton" type="TextureButton" parent="."]
margin_left = 187.5
margin_top = -85.0
margin_right = 342.5
margin_bottom = -4.0
rect_scale = Vector2( 0.95, 0.95 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )

[node name="HoverSound" type="AudioStreamPlayer" parent="CloseButton"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="CloseButton"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Tween" type="Tween" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 310.0
margin_bottom = 665.0
rect_pivot_offset = Vector2( -1067.5, 137.5 )

[node name="NewVar" type="Button" parent="VBoxContainer"]
margin_right = 290.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "New Variable"
script = ExtResource( 1 )

[node name="HoverSound" type="AudioStreamPlayer" parent="VBoxContainer/NewVar"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="VBoxContainer/NewVar"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="If" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 290.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "If Statement"
script = ExtResource( 1 )

[node name="HoverSound" type="AudioStreamPlayer" parent="VBoxContainer/If"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="VBoxContainer/If"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="While" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 290.0
margin_bottom = 140.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "While Statement"
script = ExtResource( 1 )

[node name="HoverSound" type="AudioStreamPlayer" parent="VBoxContainer/While"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="VBoxContainer/While"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Scale" type="Button" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 290.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Edit Scale"
script = ExtResource( 1 )

[node name="HoverSound" type="AudioStreamPlayer" parent="VBoxContainer/Scale"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="VBoxContainer/Scale"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Position" type="Button" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 290.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Edit Position"
script = ExtResource( 1 )

[node name="HoverSound" type="AudioStreamPlayer" parent="VBoxContainer/Position"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="VBoxContainer/Position"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Visibility" type="Button" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 290.0
margin_bottom = 284.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Edit Visibility"
script = ExtResource( 1 )

[node name="HoverSound" type="AudioStreamPlayer" parent="VBoxContainer/Visibility"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="VBoxContainer/Visibility"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Collision" type="Button" parent="VBoxContainer"]
margin_top = 288.0
margin_right = 290.0
margin_bottom = 332.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Edit Collision"
script = ExtResource( 1 )

[node name="HoverSound" type="AudioStreamPlayer" parent="VBoxContainer/Collision"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="VBoxContainer/Collision"]
stream = ExtResource( 5 )
volume_db = -10.0
